Various required changes to support BigMudBall.com

--- a/_posts/2017-07-27-gems.md
+++ b/_posts/2017-07-27-gems.md
@@ -2,7 +2,10 @@
 layout: post
 title: 'Gems! (v6.5)'
 tags: [hydejack]
+categories: jekyll update
+excerpt_separator: <!--more-->
 ---
+This paragraph (and the one following) should be the only paragraphs displayed in the blog listing. All of the copy after this paragraph should NOT be included.
 
 This maintenance release includes various quality-of-life improvements,
 especially when using the gem-based version of the theme.
@@ -11,6 +14,8 @@ The `home` layout, which is used when using `jekyll new`,
 is now a proper layout that displays a few posts/pages below the regular content,
 and it is again possible to define an author in `_config.yml`
 without setting up a `_data` directory (for more, see blow).
+
+<!--more-->
 
 Version 6.5 also includes smaller design adjustments.
 Most notably, the default font is now Noto Sans.
